Fix: remaining files updates, webiste Logo updated, video fast load

--- a/waste/example.html
+++ b/waste/example.html
@@ -21,11 +21,11 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="images/logo.PNG" alt="">
+                    <img src="images/logo2.PNG" alt="">
                 </span>
 
                 <div class="text logo-text">
-                    <span class="name">Sanjay Ghodawat Polytechnic</span>
+                    <span class="name">Sanjay Ghodawat Institute</span>
                     <span class="profession">Student Feedback System</span>
                 </div>
             </div>
