--- a/waste/header.html
+++ b/waste/header.html
@@ -51,9 +51,9 @@
     </div>
     <div class="logo">
       <!-- Placeholder for company logo -->
-      <img src="images/logo.PNG"  style="width: 70px;"alt="Company Logo">
+      <img src="images/logo2.PNG"  style="width: 70px;"alt="Company Logo">
       <div>
-        <h1>Sanjay Ghodawat Polytechnic, Atigre</h1>
+        <h1>Sanjay Ghodawat Institute, Atigre</h1>
         <p>Student Feedback System</p>
       </div>
     </div>
